--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,6 @@
+// GOOGLE FONTS
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap');
+
 // VARIABLES
 $darkGrey: #333333;
 $primary: #4793A3;
@@ -759,48 +762,53 @@ html {
 
     .grid {
         display:grid;
-        grid-template-columns: repeat(4, 1fr);
-        column-gap: 1.6em;
+        grid-template-columns: 1fr 1fr;
+        gap: 3em;
+        width: 80vw;
 
-        .service {
+        .service-box {
+            width:100%;
             background: #fff;
-            padding: 7.5%;
-
-            .service-title {
-                text-transform: uppercase;
-                color: $darkGrey;
-                letter-spacing: 2px;
-                font-size: 1.5rem;
-                text-align:center;
-            }
-
-            .divider {
-                width: 100%;
-                height: 3px;
-                background: $primary;
-                margin: 5% 0;
-            }
-
-            .desc {
-                width: 95%;
-                color: lighten($darkGrey, 10%);
-                line-height: 1.5;
-                margin-bottom: 5%;
-                text-align:center;
-            }
+            display:flex;
+            padding: 6px;
 
             .service-img {
-                width: 100%;
-                margin: 0 auto;
+                width: 30%;
+                height: 100%;
+                object-position: 50% 50%;
+                object-fit: cover;
+            }
+
+            .content {
+                padding: 1em;
+
+                .service-heading {
+                    font-family: 'Bebas Neue', sans-serif;
+                    font-size: 2.75rem;
+                    color: $darkGrey;
+                }
+
+                .divider {
+                    height: 5px;
+                    width: 75%;
+                    background: $primary;
+                    margin-bottom: 1.5em;
+                }
+
+                .service-text {
+                    width: 90%;
+                    font-size: 1rem;
+                    line-height: 1.5em;
+                }
             }
         }
     }
 
     .btn {
         position:relative;
-        top: 5em;
-        left: 50%;
-        width: 200px;
+        top: 4em;
+        left:50%;
+        transform: translateX(-50%);
         margin-left: -70px;
     }
 }
@@ -1159,19 +1167,6 @@ html {
         }
     }
 
-    .services-section {
-        .grid {
-            .service {
-                .service-title {
-                    font-size: 1.25rem;
-                }
-
-                .desc {
-                    font-size: .85rem;
-                }
-            }
-        }
-    }
 }
 
 @media screen and (max-width: 1148px) {
@@ -1244,14 +1239,6 @@ html {
         }
     }
 
-    .services-section {
-        padding: 15vh 5vw;
-
-        .grid {
-            column-gap: 1.25em;
-        }
-    }
-
     .faq-section {
         padding: 15vh 10vw;
     }
@@ -1317,20 +1304,6 @@ html {
     .header-w-divider {
         .page-title {
             font-size: 3rem;
-        }
-    }
-
-    .services-section {
-        padding: 15vh 15vw;
-
-        .grid {
-            grid-template-columns: 1fr 1fr;
-            gap: 4em;
-            
-            .service {
-                width: 100%;
-                margin: 0 auto;
-            }
         }
     }
 
@@ -1447,14 +1420,6 @@ html {
                     }
                 }
             }
-        }
-    }
-
-    .services-section {
-        padding: 15vh 10vw;
-
-        .grid { 
-            gap: 2em;
         }
     }
 }
@@ -1652,17 +1617,6 @@ html {
         }
     }
 
-    .services-section {
-
-        .grid {
-            grid-template-columns: 1fr;
-
-            .service {
-                width: 60%;
-            }
-        }
-    }
-
     .latest-work-section {
 
         .work-grid {
@@ -1755,18 +1709,6 @@ html {
             }
         }
     }
-
-    .services-section {
-        padding: 15vh 15vw;
-
-        .grid {
-
-            .service {
-                width: 100%;
-            }
-        }
-    }
-
     .header-w-divider {
         height: 50vh;
 
