--- a/css/main.css
+++ b/css/main.css
@@ -790,6 +790,34 @@ html {
   width: 175px;
 }
 
+.affiliate-disclosure-section {
+  min-height: 70vh;
+  background: url("../img/our-work-bg.png") center/cover no-repeat fixed;
+  padding-top: 80px;
+}
+
+.affiliate-disclosure-section .title {
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 4rem;
+  text-align: center;
+  margin-top: 8.5%;
+}
+
+.affiliate-disclosure-section .title span {
+  color: #595959;
+}
+
+.affiliate-disclosure-section .text {
+  color: #fff;
+  font-size: 1rem;
+  width: 27.5%;
+  margin: 2em auto;
+  text-align: center;
+  line-height: 1.25em;
+}
+
 .services-section {
   padding: 15vh 10vw;
   background: url("../img/setup-baackground-2.jpg") center/cover no-repeat fixed;
