Added color property to email input

--- a/css/main.css
+++ b/css/main.css
@@ -490,6 +490,7 @@ html {
   background: transparent;
   border: 1px solid #aaa;
   padding-left: 12px;
+  color: #fff;
 }
 
 .large-footer .footer-grid .email-section .email-btn {
