--- a/css/main.scss
+++ b/css/main.scss
@@ -469,6 +469,7 @@ html {
                 background: transparent;
                 border: 1px solid #aaa;
                 padding-left: 12px;
+                color: #fff;
             }
 
             .email-btn {
