--- a/css/main.scss
+++ b/css/main.scss
@@ -913,21 +913,88 @@ html {
         gap: 1em;
         width: 50vw;
         margin: 8em auto 0 auto;
-        
+
         .category {
             background: center/cover no-repeat;
             object-fit: cover;
             width: 100%;
-            padding: 2em 0;
+            display:flex;
+            align-items: center;
+            text-decoration: none;
+            transition: opacity .4s ease-in-out;
+            height: 15vh;
+
+            .lines {
+                height: 30px;
+                display:grid;
+                grid-template-rows: 1fr 1fr 1fr;
+                row-gap: 7.5px;
+                transition: .4s ease-in-out;
+
+                .line {
+                    width:100%;
+                    height: 100%;
+                    background: #fff;
+                    opacity: .7;
+                }
+            }
+
+            .category-title {
+                color: #fff;
+                font-size: 2rem;
+                margin-left: 1em;
+                text-transform: uppercase;
+                font-weight: 900;
+                letter-spacing: 1px;
+                transition: .4s ease-in-out;
+            }
+
+            .icon {
+                color: #fff;
+                font-size: 1.5rem;
+                margin: 2px 0 0 .5em;
+                transition: .4s ease-in-out;
+            }
 
             &.first {
                 background-image: url("../img/work/Category\ Images/Plates.jpg");
+
+                .lines {
+                    width: 22.5%;
+                }
             }
+
             &.second {
                 background-image: url("../img/work/Category\ Images/Products.jpg");
+                
+                .lines {
+                    width: 37.5%;
+                }
             }
+
             &.third {
                 background-image: url("../img/work/Category\ Images/People.jpg");
+               
+                .lines {
+                    width: 52.5%;
+                }
+            }
+
+            &:hover {
+                opacity: .9;
+
+                .lines {
+                    height: 32.5px;
+                    row-gap: 8px;
+                }
+
+                .category-title {
+                    font-size: 2.125rem;
+                }
+
+                .icon {
+                    font-size: 1.625rem;
+                }
             }
         }
     }
